test/TestSuite/Syntax/Errors/extend_prop.tjp
project test "Test" "1.0" 2007-03-25 +2m {
# MARK: error 3 extend_prop
	extend foo {
	}
}

